<resources>
    <string name="app_name">Enrollee Service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="error_invalid_email">Неправильный формат email-а</string>
    <string name="error_invalid_password">пароль слишком короткий</string>
    <string name="error_incorrect_password">Неправильный email/пароль</string>
    <string name="error_field_required">Это поле обязательно к заполнению</string>
    <string name="permission_rationale">"Необходимо разрешение на чтение контактов."</string>
    <string name="title_activity_main">Сервис регистрации</string>
    <string name="title_login">Вход в систему</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_news">Новости и правила</string>
    <string name="drawer_registration">Записаться на тест</string>
    <string name="drawer_my_tests">Мои тесты</string>
    <string name="drawer_my_account">Личный кабинет</string>
    <string name="nav_title_communicate">Отзыв</string>
    <string name="nav_share">Поделиться</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="universityLabel">Выберите ВУЗ</string>
    <string name="subjectLabel">Выберите предмет</string>
    <string name="testLabel">Выберите тест</string>
    <string name="enrollButtonText">Записаться</string>

    <string name="changePasswordActionLabel">Изменить пароль</string>
    <string name="oldPasswordLabel">Старый пароль</string>
    <string name="newPasswordLabel">Новый пароль</string>
    <string name="repeatPasswordLabel">Повторите пароль</string>
    <string name="nameLabel">ФИО</string>
    <string name="passportIdLabel">Идентификационный номер</string>
    <string name="phoneNumberLabel">Номер телефона</string>

    <string name="universityPrompt">Университет</string>
    <string name="subjectPrompt">Предмет</string>
    <string name="datePrompt">Дата</string>
    <string name="timePrompt">Время</string>
</resources>
