<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/drawer_news"
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_public_black_24dp" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/drawer_registration" />
        <item
            android:id="@+id/nav_my_tests"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/drawer_my_tests" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/drawer_my_account" />
    </group>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
